force-app/main/default/objects/Bank_Account__c/fields/Above_18__c.field-meta.xml
<CustomField>
    <fullName>Above_18__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Above 18</label>
    <type>Checkbox</type>
</CustomField>