force-app/main/default/objects/Bank_Account__c/fields/Application_Age__c.field-meta.xml
<CustomField>
    <fullName>Application_Age__c</fullName>
    <formula>TODAY()- Application_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>